src/objects/Acknowledgment__c.object
<CustomObject>
    <fields>
        <fullName>Action_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Plan</label>
        <referenceTo>Action_Plan__c</referenceTo>
        <relationshipName>Acknowledgements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alias</label>
        <referenceTo>Alias__c</referenceTo>
        <relationshipLabel>Acknowledgments</relationshipLabel>
        <relationshipName>Acknowledgments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment</label>
        <referenceTo>Assessment__c</referenceTo>
        <relationshipLabel>Acknowledgments</relationshipLabel>
        <relationshipName>Acknowledgments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Census_Detail_Report__c</fullName>
        <formula>HYPERLINK(&apos;/apex/rpt_CensusDetail_CM?ackId=&apos; + Id, &apos;Report&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Census Detail Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Acknowledged__c</fullName>
        <label>Date Acknowledged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initials__c</fullName>
        <label>Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>CM Census Detail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acknowledged By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Acknowledgements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Acknowledgment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action_Plan__c</columns>
        <columns>Date_Acknowledged__c</columns>
        <columns>Initials__c</columns>
        <columns>User__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>a-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acknowledgments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>